Fix horizontal scrolling on home page

--- a/staticfiles/checkout/css/checkout.css
+++ b/staticfiles/checkout/css/checkout.css
@@ -43,7 +43,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
+    background: #081F5c;
     z-index: 9999;
 }
 
@@ -63,4 +63,10 @@ select option[value=""] {
     justify-content: center;
     margin: 0;
     height: 100%;
+
+}
+
+.order-confirmation-wrapper {
+    border:#081F5c 2px solid;
+    border-radius: 15px;
 }
